--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <title>A simple HTML document</title>
+	<link rel="stylesheet"  href="styles.css">
+
 </head>
 <body>
     <h1>MIP web</h1>
