--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 </head>
 <body>
     <h1>MIP web</h1>
+	
+	<h2>Termíny odovzdávania</h2>
+		<ol>
+		<li>Registrácia na GitHub: odovzdajte na prvom cvičeni </li>
+		<li>Spresnenie témy: 8.10.2023 23:59 </li>
+		<li>Predbežná verzia 5.11.2023 23:59 </li>
+		<li>Slajdy prezentácie: 26.11.2023 23:59 </li>
+		<li>Prednesenie prezentácie: na cvičení 11–12 (podľa pokynov učiteľa) </li> 
+		<li>Článok: posledný deň výučby v zimnom semestri 16.12.2023 23:59 </li>
+		</ol>
+
 
 </body>
 </html>
